# blackshadeselite

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  TODO  blackshades  config.status  config.txt  configure  configure.ac
Data/: Highscore
Data/Textures/: ._Blood  ._Blood.tga  ._Blood.tga copy  ._BulletHole.tga  ._Crater.tga  ._Deadpersonsprite.tga  ._Flare.tga  ._Font.tga  ._HitFlash.tga  ._MuzzleFlash.tga  ._Personsprite.tga  ._Scope.tga  ._Smoke.tga  ._rain.tga  ._snow.tga
Data/Textures/Blood/: ._Blood1.tga  ._Blood10.tga  ._Blood11.tga  ._Blood2.tga  ._Blood3.tga  ._Blood4.tga  ._Blood5.tga  ._Blood6.tga  ._Blood7.tga  ._Blood8.tga  ._Blood9.tga
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
fedora/: blackshades-.9-1.fc21.src.rpm  blackshades-.9-1.fc21.x86_64.rpm  blackshades-0.9-1.fc21.src.rpm  blackshades-0.9-1.fc21.x86_64.rpm  blackshades-debuginfo-.9-1.fc21.x86_64.rpm  blackshades-debuginfo-0.9-1.fc21.x86_64.rpm  blackshades.spec
src/: #Game.cpp#  .#Game.cpp  AGL_DSp.cpp  AGL_DSp.h  Alerts.cpp  Alerts.h  Button.cpp  Button.h  Button.hpp  Camera.cpp  Camera.h  Camera.hpp  Colors.h  Config.cpp  Config.hpp  Constants.h  Decals.cpp  Decals.h  Decals.hpp  Files.cpp  Files.h  Files.hpp  Fog.cpp  Fog.h  Fog.hpp  Font.cpp  Font.h  Font.hpp  Frustum.cpp  Frustum.hpp  Game.cpp  Game.h  Game.hpp  GameDraw.cpp  GameInitDispose.cpp  GameLoop.cpp  GameTick.cpp  Globals.cpp  Globals.h  Globals.hpp  (+42 more)
src/.deps/: Button.Po  Camera.Po  Config.Po  Decals.Po  Files.Po  Fog.Po  Font.Po  Frustum.Po  Game.Po  GameDraw.Po  GameInitDispose.Po  GameLoop.Po  GameTick.Po  Globals.Po  Image.Po  Label.Po  MacInput.Po  Main.Po  Maths.Po  Models.Po  Person.Po  Quaternions.Po  SDL_funcs.Po  Serialize.Po  Skeleton.Po  Sprites.Po  Support.Po  TGALoader.Po  Text.Po  Weapon.Po  Window.Po
src/Net/: #Client.cpp#  Client.cpp~  Client.h  NetCommon.cpp  Server.cpp  Server.cpp~  Server.h
