bin_PROGRAMS = black

#files of project
black_SOURCES = \
src/Button.cpp \
src/Camera.cpp \
src/Config.cpp \
src/Decals.cpp \
src/Fog.cpp \
src/Font.cpp \
src/Frustum.cpp \
src/Game.cpp \
src/GameDraw.cpp \
src/GameInitDispose.cpp \
src/GameLoop.cpp \
src/GameTick.cpp \
src/Globals.cpp \
src/Image.cpp \
src/Label.cpp \
src/MacInput.cpp \
src/Main.cpp \
src/Maths.cpp \
src/Models.cpp \
src/Person.cpp \
src/Quaternions.cpp \
src/SDL_funcs.cpp \
src/Serialize.cpp \
src/Skeleton.cpp \
src/Sprites.cpp \
src/Support.cpp \
src/TGALoader.cpp \
src/Text.cpp \
src/Weapon.cpp \
src/Window.cpp 

AM_CXXFLAGS = -pedantic -O3 -std=c++14 -Werror -g 
#using an m4 directory for macros
ACLOCAL_AMFLAGS = -I m4 --install
#letting autoconf know about the m4 dir
EXTRA_DIST = m4/NOTES
