bin_PROGRAMS = blackshades

#files of project
blackshades_SOURCES = \
src/Button.hpp \
src/Button.cpp \
src/Camera.hpp \
src/Camera.cpp \
src/Config.hpp \
src/Config.cpp \
src/Decals.hpp \
src/Decals.cpp \
src/Fog.hpp \
src/Fog.cpp \
src/Font.hpp \
src/Font.cpp \
src/Frustum.hpp \
src/Frustum.cpp \
src/Game.hpp \
src/Game.cpp \
src/GameDraw.hpp \
src/GameDraw.cpp \
src/GameInitDispose.hpp \
src/GameInitDispose.cpp \
src/GameLoop.hpp \
src/GameLoop.cpp \
src/GameTick.hpp \
src/GameTick.cpp \
src/Globals.hpp \
src/Globals.cpp \
src/Image.hpp \
src/Image.cpp \
src/Label.hpp \
src/Label.cpp \
src/MacInput.hpp \
src/MacInput.cpp \
src/Main.cpp \
src/Maths.hpp \
src/Maths.cpp \
src/Models.hpp \
src/Models.cpp \
src/Person.hpp \
src/Person.cpp \
src/Quaternions.hpp \
src/Quaternions.cpp \
src/SDL_funcs.hpp \
src/SDL_funcs.cpp \
src/Serialize.hpp \
src/Serialize.cpp \
src/Skeleton.hpp \
src/Skeleton.cpp \
src/Sprites.hpp \
src/Sprites.cpp \
src/Support.hpp \
src/Support.cpp \
src/TGALoader.hpp \
src/TGALoader.cpp \
src/Text.hpp \
src/Text.cpp \
src/Weapon.hpp \
src/Weapon.cpp \
src/Window.hpp \
src/Window.cpp 

AM_CXXFLAGS = -pedantic -O3 -std=c++14 -Werror -g 
#using an m4 directory for macros
ACLOCAL_AMFLAGS = -I m4 --install
#letting autoconf know about the m4 dir
EXTRA_DIST = m4/NOTES
